--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,6 +12,9 @@ jobs:
   build-and-test:
     # The type of runner that the job will run on
     runs-on: macos-13-xlarge
+    defaults:
+      run:
+        working-directory: ./IMGLY    
 
     timeout-minutes: 8
 
